@startuml
'https://plantuml.com/class-diagram

object main
interface Entry {
    {abstract}GetName()
    {abstract}GetSize()
    {abstract}printList()
}
class File {
    name
    size
    GetName()
    GetSize()
    printList()
}
class Directory {
    name
    directory []Entry
    GetName()
    GetSize()
    Add()
    PrintList()
    printList()
}

main -> Entry
Entry <|.. File
Entry <|.. Directory
Entry <--o Directory

@enduml